<resources>
    <string name="app_name">stepcounter</string>
    <string name="_0">0</string>
    <string name="todo">TODO</string>
    <string name="start">start</string>
    <string name="stop">stop</string>
    <string name="hint_id">ID를 입력하세요</string>
    <string name="hint_password">패스워드를 입력하세요</string>
    <string name="hint_repassword">패스워드를 다시 입력하세요</string>
    <string name="hint_name">성명을 입력하세요</string>
    <string name="hint_mobileNO">휴대폰번호를 입력하세요</string>
    <string name="hint_email">이메일을 입력하세요</string>
    <string name="btn_login">로그인</string>
    <string name="btn_register">회원가입</string>
    <string name="btn_logout">로그아웃</string>
    <string name="check_button">확인</string>
    <string name="delete">취소</string>
    <string name="join_button">가입</string>
    <string name="reset">reset</string>
    <string name="age">나이</string>
    <string name="CM">키(CM)</string>
    <string name="KG">몸무게(KG)</string>
    <string name="girl">여자</string>
    <string name="man">남자</string>
    <string name="RESULT">RESULT</string>
    <string name="BMI">BMI</string>
    <string name="underweight">저체중</string>
    <string name="obesity">비만</string>
    <string name="normal">정상</string>
    <string name="graph">그래프</string>
    <string name="btn_back">뒤로가기</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_movement_a">팔굽혀펴기</string>
    <string name="menu_movement_b">윗몸일으키기</string>
    <string name="menu_movement_c">버피</string>
    <string name="menu_movement_d">스쿼트</string>  
    <string name="menu_movement_e">런지</string>
    <string name="menu_movement_f">크런치</string>
    <string name="menu_movement_g">마운틴클라이밍</string>
    <string name="dash">-</string>
</resources>