<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#d2e6ff"
    tools:context=".MainActivity">


    <EditText
        android:id="@+id/editTextAge"
        android:layout_width="218dp"
        android:layout_height="55dp"
        android:layout_marginStart="102dp"
        android:layout_marginLeft="102dp"
        android:layout_marginEnd="102dp"
        android:layout_marginRight="102dp"
        android:layout_marginBottom="17dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/age"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.545"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.317"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/editTextHeight"
        android:layout_width="218dp"
        android:layout_height="55dp"
        android:layout_marginStart="102dp"
        android:layout_marginLeft="102dp"
        android:layout_marginEnd="102dp"
        android:layout_marginRight="102dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/CM"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.545"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.43"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/editTextWeight"
        android:layout_width="218dp"
        android:layout_height="55dp"
        android:layout_marginStart="102dp"
        android:layout_marginLeft="102dp"
        android:layout_marginEnd="102dp"
        android:layout_marginRight="102dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/KG"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.545"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.187"
        tools:ignore="MissingConstraints,NotSibling" />

    <Button
        android:id="@+id/RESULT"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="38dp"
        android:backgroundTint="#6c83ad"
        android:text="@string/RESULT"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.689"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="81dp"
        android:layout_height="50dp"
        android:layout_marginStart="165dp"
        android:layout_marginLeft="165dp"
        android:layout_marginEnd="165dp"
        android:layout_marginRight="165dp"
        android:layout_marginBottom="17dp"
        android:text="@string/BMI"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.078"
        tools:ignore="MissingConstraints" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="201dp"
        android:layout_height="44dp"
        android:layout_marginStart="105dp"
        android:layout_marginLeft="105dp"
        android:layout_marginEnd="105dp"
        android:layout_marginRight="105dp"
        android:layout_marginBottom="50dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/RESULT"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.994"
        tools:ignore="MissingConstraints">

        <RadioButton
            android:id="@+id/radioButton"
            android:layout_width="71dp"
            android:layout_height="46dp"
            android:layout_marginEnd="59dp"
            android:layout_marginRight="59dp"
            android:layout_marginBottom="77dp"
            android:text="@string/girl"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.345"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.649"
            tools:ignore="MissingConstraints" />

        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="71dp"
            android:layout_height="match_parent"
            android:text="@string/man"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.713"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.576"
            tools:ignore="MissingConstraints" />
    </RadioGroup>


</androidx.constraintlayout.widget.ConstraintLayout>